made all responsive tables fixed width and word broken on tds

--- a/src/sass/myservice-tables.scss
+++ b/src/sass/myservice-tables.scss
@@ -3,13 +3,11 @@
 //
 
 @mixin table-responsive {
-  table-layout: fixed;
   width: 100%;
 
   td,
   th {
     width: auto;
-    word-wrap: break-word;
   }
 
   thead {
@@ -242,6 +240,15 @@ table {
     td {
       width: 60%;
     }
+  }
+}
+
+.table-responsive {
+  table-layout: fixed;
+
+  td,
+  th {
+    word-wrap: break-word;
   }
 }
 
